--- a/Solar_System/styles.css
+++ b/Solar_System/styles.css
@@ -38,6 +38,8 @@ body {
     display: flex;
     flex-flow: column;
     min-height: 100%;
+    position: relative;
+    z-index: 1;
 }
 .page-content {
     flex-grow: 1;
